--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -160,14 +160,16 @@ pre {
   display: block;
   margin-top: 0;
   margin-bottom: 1rem;
+  margin-left: 20px;
+  margin-right: 20px;
   padding: 1rem;
   font-size: .8rem;
   line-height: 1.4;
   white-space: pre;
-  white-space: pre-wrap;
-  word-break: break-all;
-  word-wrap: break-word;
-  background-color: #f9f9f9;
+  word-break: normal;
+  word-wrap: normal;
+  overflow: auto;
+  background-color: #ebebeb;
 }
 pre code {
   padding: 0;
